--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -88,7 +88,7 @@
               <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="properties.html">Properties</a></li>
-                <li><a href="property-details.html">Property Details</a></li>
+
                 <li><a href="contact.html" class="active">Contact Us</a></li>
                 <li>
                   <a href="#"
@@ -158,9 +158,7 @@
                     alt=""
                     style="max-width: 47px"
                   />
-                  <h6>
-                    info@villahorizon.com<br /><span>Business Email</span>
-                  </h6>
+                  <h6>info@vhorizon.com<br /><span>Business Email</span></h6>
                 </div>
               </div>
             </div>
