--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -88,7 +88,6 @@
               <ul class="nav">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="properties.html">Properties</a></li>
-                <li><a href="property-details.html">Property Details</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li>
                   <a href="contact.html"
@@ -300,9 +299,7 @@
           <div class="col-lg-10 offset-lg-1">
             <div class="video-frame">
               <img src="assets/images/video-frame.jpg" alt="" />
-              <a href="https://youtube.com" target="_blank"
-                ><i class="fa fa-play"></i
-              ></a>
+              <a href="https://youtube.com"><i class="fa fa-play"></i></a>
             </div>
           </div>
         </div>
@@ -357,8 +354,8 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="section-heading">
-              <h6>| Best Deal</h6>
-              <h2>Find Your Best Deal Right Now!</h2>
+              <h6>| Great Deal</h6>
+              <h2>Find Your Great Deal Right Here!</h2>
             </div>
           </div>
           <div class="col-lg-12">
@@ -421,11 +418,11 @@
                       <div class="col-lg-3">
                         <div class="info-table">
                           <ul>
-                            <li>Total Flat Space <span>185 m2</span></li>
-                            <li>Floor number <span>26th</span></li>
-                            <li>Number of rooms <span>4</span></li>
-                            <li>Parking Available <span>Yes</span></li>
-                            <li>Payment Process <span>Bank</span></li>
+                            <li>Apartment Space <span>200 m²</span></li>
+                            <li>Floor Number <span>15th</span></li>
+                            <li>Number of Bedrooms <span>3</span></li>
+                            <li>Balcony <span>with City View</span></li>
+                            <li>Payment<span>Bank Transfer</span></li>
                           </ul>
                         </div>
                       </div>
@@ -435,13 +432,12 @@
                       <div class="col-lg-3">
                         <h4>Extra Info About Property</h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit, do eiusmod tempor pack incididunt ut labore et
-                          dolore magna aliqua quised ipsum suspendisse.
-                          <br /><br />When you need free CSS templates, you can
-                          simply type TemplateMo in any search engine website.
-                          In addition, you can type TemplateMo Portfolio,
-                          TemplateMo One Page Layouts, etc.
+                          Discover the perfect blend of luxury and comfort in
+                          this stunning apartment. Boasting spacious interiors
+                          with modern finishes, it offers breathtaking views
+                          from private balconies. Enjoy a fully-equipped gourmet
+                          kitchen, high ceilings, and elegant living spaces
+                          designed for relaxation and entertainment.
                         </p>
                         <div class="icon-button">
                           <a href="property-details.html"
@@ -461,11 +457,11 @@
                       <div class="col-lg-3">
                         <div class="info-table">
                           <ul>
-                            <li>Total Flat Space <span>250 m2</span></li>
-                            <li>Floor number <span>26th</span></li>
-                            <li>Number of rooms <span>5</span></li>
-                            <li>Parking Available <span>Yes</span></li>
-                            <li>Payment Process <span>Bank</span></li>
+                            <li>Villa Space <span>500 m²</span></li>
+                            <li>Number of Bedrooms <span>4</span></li>
+                            <li>Private Pool <span>Yes</span></li>
+                            <li>Garden Space <span>200 m²</span></li>
+                            <li>Payment<span>Bank Transfer</span></li>
                           </ul>
                         </div>
                       </div>
@@ -475,13 +471,14 @@
                       <div class="col-lg-3">
                         <h4>Detail Info About Villa</h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit, do eiusmod tempor pack incididunt ut labore et
-                          dolore magna aliqua quised ipsum suspendisse.
-                          <br /><br />Swag fanny pack lyft blog twee. JOMO
-                          ethical copper mug, succulents typewriter shaman DIY
-                          kitsch twee taiyaki fixie hella venmo after messenger
-                          poutine next level humblebrag swag franzen.
+                          Step into your dream villa that offers a seamless
+                          blend of elegance and comfort. This 4-bedroom property
+                          spans 500 m² of luxurious living space, complete with
+                          ensuite bathrooms and a spacious layout. Relax by your
+                          private pool or enjoy tranquil evenings in the lush
+                          200 m² garden. Designed with modern aesthetics, the
+                          villa features premium finishes, ample parking, and
+                          top-tier amenities.
                         </p>
                         <div class="icon-button">
                           <a href="property-details.html"
@@ -501,11 +498,14 @@
                       <div class="col-lg-3">
                         <div class="info-table">
                           <ul>
-                            <li>Total Flat Space <span>320 m2</span></li>
-                            <li>Floor number <span>34th</span></li>
-                            <li>Number of rooms <span>6</span></li>
-                            <li>Parking Available <span>Yes</span></li>
-                            <li>Payment Process <span>Bank</span></li>
+                            <li>Penthouse Space <span>600 m²</span></li>
+                            <li>Number of Bedrooms <span>5</span></li>
+                            <li>
+                              Private Terrace
+                              <span>Yes</span>
+                            </li>
+                            <li>Jacuzzi <span>Yes</span></li>
+                            <li>Payment <span>Bank Transfer</span></li>
                           </ul>
                         </div>
                       </div>
@@ -515,13 +515,12 @@
                       <div class="col-lg-3">
                         <h4>Extra Info About Penthouse</h4>
                         <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit, do eiusmod tempor pack incididunt ut labore et
-                          dolore magna aliqua quised ipsum suspendisse.
-                          <br /><br />Swag fanny pack lyft blog twee. JOMO
-                          ethical copper mug, succulents typewriter shaman DIY
-                          kitsch twee taiyaki fixie hella venmo after messenger
-                          poutine next level humblebrag swag franzen.
+                          Elevate your living experience with this luxurious
+                          penthouse offering panoramic skyline views and
+                          unmatched privacy. Spanning 600 m², it features 5
+                          spacious bedrooms, 4 ensuite bathrooms, and a stunning
+                          private terrace perfect for relaxation or
+                          entertainment.
                         </p>
                         <div class="icon-button">
                           <a href="property-details.html"
@@ -542,21 +541,24 @@
     <div class="properties section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 offset-lg-4">
+          <div class="col-lg-6 offset-lg-3">
             <div class="section-heading text-center">
               <h6>| Properties</h6>
-              <h2>We Provide The Best Property You Like</h2>
+              <h2>
+                We Deliver Exceptional Properties That Suit Your Lifestyle
+              </h2>
             </div>
           </div>
         </div>
         <div class="row">
+          <!-- Property 1 -->
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-01.jpg" alt=""
-              /></a>
+              <a href="property-details.html">
+                <img src="assets/images/property-01.jpg" alt="Luxury Villa" />
+              </a>
               <span class="category">Luxury Villa</span>
-              <h6>$2.264.000</h6>
+              <h6>$2,264,000</h6>
               <h4>
                 <a href="property-details.html"
                   >18 New Street Miami, OR 97219</a
@@ -565,7 +567,7 @@
               <ul>
                 <li>Bedrooms: <span>8</span></li>
                 <li>Bathrooms: <span>8</span></li>
-                <li>Area: <span>545m2</span></li>
+                <li>Area: <span>545m²</span></li>
                 <li>Floor: <span>3</span></li>
                 <li>Parking: <span>6 spots</span></li>
               </ul>
@@ -574,120 +576,138 @@
               </div>
             </div>
           </div>
+
+          <!-- Property 2 -->
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-02.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$1.180.000</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-02.jpg"
+                  alt="Luxury Apartment"
+                />
+              </a>
+              <span class="category">Luxury Apartment</span>
+              <h6>$1,542,000</h6>
               <h4>
-                <a href="property-details.html"
-                  >54 Mid Street Florida, OR 27001</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>6</span></li>
-                <li>Bathrooms: <span>5</span></li>
-                <li>Area: <span>450m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>8 spots</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-03.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$1.460.000</h6>
-              <h4>
-                <a href="property-details.html"
-                  >26 Old Street Miami, OR 38540</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>5</span></li>
-                <li>Bathrooms: <span>4</span></li>
-                <li>Area: <span>225m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>10 spots</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-04.jpg" alt=""
-              /></a>
-              <span class="category">Apartment</span>
-              <h6>$584.500</h6>
-              <h4>
-                <a href="property-details.html"
-                  >12 New Street Miami, OR 12650</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>4</span></li>
-                <li>Bathrooms: <span>3</span></li>
-                <li>Area: <span>125m2</span></li>
-                <li>Floor: <span>25th</span></li>
-                <li>Parking: <span>2 cars</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-05.jpg" alt=""
-              /></a>
-              <span class="category">Penthouse</span>
-              <h6>$925.600</h6>
-              <h4>
-                <a href="property-details.html"
-                  >34 Beach Street Miami, OR 42680</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>4</span></li>
-                <li>Bathrooms: <span>4</span></li>
-                <li>Area: <span>180m2</span></li>
-                <li>Floor: <span>38th</span></li>
-                <li>Parking: <span>2 cars</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-06.jpg" alt=""
-              /></a>
-              <span class="category">Modern Condo</span>
-              <h6>$450.000</h6>
-              <h4>
-                <a href="property-details.html"
-                  >22 New Street Portland, OR 16540</a
-                >
+                <a href="property-details.html">32 Skyline Avenue, NYC 10001</a>
               </h4>
               <ul>
                 <li>Bedrooms: <span>3</span></li>
                 <li>Bathrooms: <span>2</span></li>
-                <li>Area: <span>165m2</span></li>
-                <li>Floor: <span>26th</span></li>
-                <li>Parking: <span>3 cars</span></li>
+                <li>Area: <span>320m²</span></li>
+                <li>Floor: <span>25</span></li>
+                <li>Parking: <span>2 spots</span></li>
+              </ul>
+              <div class="main-button">
+                <a href="property-details.html">Schedule a visit</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Property 3 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-03.jpg"
+                  alt="Beachside Villa"
+                />
+              </a>
+              <span class="category">Beachside Villa</span>
+              <h6>$3,100,000</h6>
+              <h4>
+                <a href="property-details.html"
+                  >75 Ocean Drive, Malibu, CA 90265</a
+                >
+              </h4>
+              <ul>
+                <li>Bedrooms: <span>5</span></li>
+                <li>Bathrooms: <span>5</span></li>
+                <li>Area: <span>600m²</span></li>
+                <li>Floor: <span>2</span></li>
+                <li>Parking: <span>4 spots</span></li>
+              </ul>
+              <div class="main-button">
+                <a href="property-details.html">Schedule a visit</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Property 4 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-04.jpg"
+                  alt="Penthouse Suite"
+                />
+              </a>
+              <span class="category">Penthouse Suite</span>
+              <h6>$4,750,000</h6>
+              <h4>
+                <a href="property-details.html">45 Elite Tower, Dubai Marina</a>
+              </h4>
+              <ul>
+                <li>Bedrooms: <span>4</span></li>
+                <li>Bathrooms: <span>4</span></li>
+                <li>Area: <span>700m²</span></li>
+                <li>Floor: <span>50</span></li>
+                <li>Parking: <span>3 spots</span></li>
+              </ul>
+              <div class="main-button">
+                <a href="property-details.html">Schedule a visit</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Property 5 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-05.jpg"
+                  alt="Modern Bungalow"
+                />
+              </a>
+              <span class="category">Modern Bungalow</span>
+              <h6>$1,980,000</h6>
+              <h4>
+                <a href="property-details.html"
+                  >12 Green Valley, Austin, TX 73301</a
+                >
+              </h4>
+              <ul>
+                <li>Bedrooms: <span>6</span></li>
+                <li>Bathrooms: <span>4</span></li>
+                <li>Area: <span>400m²</span></li>
+                <li>Floor: <span>1</span></li>
+                <li>Parking: <span>3 spots</span></li>
+              </ul>
+              <div class="main-button">
+                <a href="property-details.html">Schedule a visit</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Property 6 -->
+          <div class="col-lg-4 col-md-6">
+            <div class="item">
+              <a href="property-details.html">
+                <img src="assets/images/property-06.jpg" alt="Urban Loft" />
+              </a>
+              <span class="category">Urban Loft</span>
+              <h6>$950,000</h6>
+              <h4>
+                <a href="property-details.html"
+                  >88 Downtown St, Seattle, WA 98101</a
+                >
+              </h4>
+              <ul>
+                <li>Bedrooms: <span>2</span></li>
+                <li>Bathrooms: <span>1</span></li>
+                <li>Area: <span>150m²</span></li>
+                <li>Floor: <span>12</span></li>
+                <li>Parking: <span>1 spot</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -747,7 +767,7 @@
                     alt=""
                     style="max-width: 52px"
                   />
-                  <h6>info@villa.co<br /><span>Business Email</span></h6>
+                  <h6>info@vhorizon.com<br /><span>Business Email</span></h6>
                 </div>
               </div>
             </div>
