--- a/properties.html
+++ b/properties.html
@@ -56,7 +56,7 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
-                <a href="https://x.com/minthu" target="_blank"
+                <a href="https://x.com/minthu"
                   ><i class="fab fa-twitter"></i
                 ></a>
               </li>
@@ -87,10 +87,10 @@
               <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="properties.html" class="active">Properties</a></li>
-                <li><a href="property-details.html">Property Details</a></li>
+
                 <li><a href="contact.html">Contact Us</a></li>
                 <li>
-                  <a href="#"
+                  <a href="contact.html"
                     ><i class="fa fa-calendar"></i> Schedule a visit</a
                   >
                 </li>
@@ -138,22 +138,23 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 adv"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-01.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$2.264.000</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-04.jpg"
+                  alt="Penthouse Suite"
+                />
+              </a>
+              <span class="category">Penthouse Suite</span>
+              <h6>$4,750,000</h6>
               <h4>
-                <a href="property-details.html"
-                  >18 Old Street Miami, OR 97219</a
-                >
+                <a href="property-details.html">45 Elite Tower, Dubai Marina</a>
               </h4>
               <ul>
-                <li>Bedrooms: <span>8</span></li>
-                <li>Bathrooms: <span>8</span></li>
-                <li>Area: <span>545m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>6 spots</span></li>
+                <li>Bedrooms: <span>4</span></li>
+                <li>Bathrooms: <span>4</span></li>
+                <li>Area: <span>700m²</span></li>
+                <li>Floor: <span>50</span></li>
+                <li>Parking: <span>3 spots</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -164,22 +165,23 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 str"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-02.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$1.180.000</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-02.jpg"
+                  alt="Luxury Apartment"
+                />
+              </a>
+              <span class="category">Luxury Apartment</span>
+              <h6>$1,542,000</h6>
               <h4>
-                <a href="property-details.html"
-                  >54 New Street Florida, OR 27001</a
-                >
+                <a href="property-details.html">32 Skyline Avenue, NYC 10001</a>
               </h4>
               <ul>
-                <li>Bedrooms: <span>6</span></li>
-                <li>Bathrooms: <span>5</span></li>
-                <li>Area: <span>450m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>8 spots</span></li>
+                <li>Bedrooms: <span>3</span></li>
+                <li>Bathrooms: <span>2</span></li>
+                <li>Area: <span>320m²</span></li>
+                <li>Floor: <span>25</span></li>
+                <li>Parking: <span>2 spots</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -190,22 +192,25 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 adv rac"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-03.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$1.460.000</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-03.jpg"
+                  alt="Beachside Villa"
+                />
+              </a>
+              <span class="category">Beachside Villa</span>
+              <h6>$3,100,000</h6>
               <h4>
                 <a href="property-details.html"
-                  >26 Mid Street Portland, OR 38540</a
+                  >75 Ocean Drive, Malibu, CA 90265</a
                 >
               </h4>
               <ul>
                 <li>Bedrooms: <span>5</span></li>
-                <li>Bathrooms: <span>4</span></li>
-                <li>Area: <span>225m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>10 spots</span></li>
+                <li>Bathrooms: <span>5</span></li>
+                <li>Area: <span>600m²</span></li>
+                <li>Floor: <span>2</span></li>
+                <li>Parking: <span>4 spots</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -216,74 +221,23 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 str"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-04.jpg" alt=""
-              /></a>
-              <span class="category">Apartment</span>
-              <h6>$584.500</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-04.jpg"
+                  alt="Penthouse Suite"
+                />
+              </a>
+              <span class="category">Penthouse Suite</span>
+              <h6>$4,750,000</h6>
               <h4>
-                <a href="property-details.html"
-                  >12 Hope Street Portland, OR 12650</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>4</span></li>
-                <li>Bathrooms: <span>3</span></li>
-                <li>Area: <span>125m2</span></li>
-                <li>Floor: <span>25th</span></li>
-                <li>Parking: <span>2 cars</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 rac str"
-          >
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-05.jpg" alt=""
-              /></a>
-              <span class="category">Penthouse</span>
-              <h6>$925.600</h6>
-              <h4>
-                <a href="property-details.html"
-                  >34 Hope Street Portland, OR 42680</a
-                >
+                <a href="property-details.html">45 Elite Tower, Dubai Marina</a>
               </h4>
               <ul>
                 <li>Bedrooms: <span>4</span></li>
                 <li>Bathrooms: <span>4</span></li>
-                <li>Area: <span>180m2</span></li>
-                <li>Floor: <span>38th</span></li>
-                <li>Parking: <span>2 cars</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 rac adv"
-          >
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-06.jpg" alt=""
-              /></a>
-              <span class="category">Modern Condo</span>
-              <h6>$450.000</h6>
-              <h4>
-                <a href="property-details.html"
-                  >22 Hope Street Portland, OR 16540</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>3</span></li>
-                <li>Bathrooms: <span>2</span></li>
-                <li>Area: <span>165m2</span></li>
-                <li>Floor: <span>26th</span></li>
-                <li>Parking: <span>3 cars</span></li>
+                <li>Area: <span>700m²</span></li>
+                <li>Floor: <span>50</span></li>
+                <li>Parking: <span>3 spots</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -294,22 +248,25 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 rac str"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-03.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$980.000</h6>
+              <a href="property-details.html">
+                <img
+                  src="assets/images/property-05.jpg"
+                  alt="Modern Bungalow"
+                />
+              </a>
+              <span class="category">Modern Bungalow</span>
+              <h6>$1,980,000</h6>
               <h4>
                 <a href="property-details.html"
-                  >14 Mid Street Miami, OR 36450</a
+                  >12 Green Valley, Austin, TX 73301</a
                 >
               </h4>
               <ul>
-                <li>Bedrooms: <span>8</span></li>
-                <li>Bathrooms: <span>8</span></li>
-                <li>Area: <span>550m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>12 spots</span></li>
+                <li>Bedrooms: <span>6</span></li>
+                <li>Bathrooms: <span>4</span></li>
+                <li>Area: <span>400m²</span></li>
+                <li>Floor: <span>1</span></li>
+                <li>Parking: <span>3 spots</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
@@ -320,63 +277,27 @@
             class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 rac adv"
           >
             <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-02.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$1.520.000</h6>
+              <a href="property-details.html">
+                <img src="assets/images/property-06.jpg" alt="Urban Loft" />
+              </a>
+              <span class="category">Urban Loft</span>
+              <h6>$950,000</h6>
               <h4>
                 <a href="property-details.html"
-                  >26 Old Street Miami, OR 12870</a
+                  >88 Downtown St, Seattle, WA 98101</a
                 >
               </h4>
               <ul>
-                <li>Bedrooms: <span>12</span></li>
-                <li>Bathrooms: <span>15</span></li>
-                <li>Area: <span>380m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>14 spots</span></li>
+                <li>Bedrooms: <span>2</span></li>
+                <li>Bathrooms: <span>1</span></li>
+                <li>Area: <span>150m²</span></li>
+                <li>Floor: <span>12</span></li>
+                <li>Parking: <span>1 spot</span></li>
               </ul>
               <div class="main-button">
                 <a href="property-details.html">Schedule a visit</a>
               </div>
             </div>
-          </div>
-          <div
-            class="col-lg-4 col-md-6 align-self-center mb-30 properties-items col-md-6 rac adv"
-          >
-            <div class="item">
-              <a href="property-details.html"
-                ><img src="assets/images/property-01.jpg" alt=""
-              /></a>
-              <span class="category">Luxury Villa</span>
-              <h6>$3.145.000</h6>
-              <h4>
-                <a href="property-details.html"
-                  >34 New Street Miami, OR 24650</a
-                >
-              </h4>
-              <ul>
-                <li>Bedrooms: <span>10</span></li>
-                <li>Bathrooms: <span>12</span></li>
-                <li>Area: <span>860m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>10 spots</span></li>
-              </ul>
-              <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <ul class="pagination">
-              <li><a href="#">1</a></li>
-              <li><a class="is_active" href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">>></a></li>
-            </ul>
           </div>
         </div>
       </div>
