--- a/property-details.html
+++ b/property-details.html
@@ -56,7 +56,7 @@
                 <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
-                <a href="https://x.com/minthu" target="_blank"
+                <a href="https://x.com/minthu"
                   ><i class="fab fa-twitter"></i
                 ></a>
               </li>
@@ -94,7 +94,7 @@
                 </li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li>
-                  <a href="#"
+                  <a href="contact.html"
                     ><i class="fa fa-calendar"></i> Schedule a visit</a
                   >
                 </li>
@@ -138,7 +138,6 @@
                 Template for your company website. TemplateMo provides you the
                 <a
                   href="https://www.google.com/search?q=best+free+css+templates"
-                  target="_blank"
                   >best free CSS templates</a
                 >
                 in the world. Please tell your friends about it. Thank you.
@@ -378,7 +377,7 @@
                           poutine next level humblebrag swag franzen.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
+                          <a href="property-details.html"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
@@ -418,7 +417,7 @@
                           poutine next level humblebrag swag franzen.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
+                          <a href="property-details.html"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
@@ -461,7 +460,7 @@
                           swag franzen.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
+                          <a href="property-details.html"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
