change in Header

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="">
-                <h1>Villa Horizons</h1>
+                <h1><span style="color: #f35525">V</span>Horizons</h1>
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
