--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index.html" class="">
-                <h1>Villa Horizons</h1>
+              <a href="index.html" class="logo">
+                <h1><span style="color: #f35525;">V</span>Horizons</h1>
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
