--- a/property-details.html
+++ b/property-details.html
@@ -80,7 +80,7 @@
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <h1>Villa</h1>
+                <h1><span style="color: #f35525">V</span>Horizons</h1>
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
